Merge from upstream (#69)