@@ -18,14 +18,20 @@ dependencies {
     testImplementation(kotlin("test-junit"))
 }
 
+//tasks.withType<KotlinJvmCompile>().configureEach {
+//    kotlinOptions {
+//        jvmTarget = "16"
+//        apiVersion = "1.5"
+//        languageVersion = "1.5"
+//    }
+//}
+
 //tasks.withType<Detekt>().configureEach {
 //    // Target version of the generated JVM bytecode. It is used for type resolution.
 //    jvmTarget = "1.8"
 //}
 
 tasks.withType<Test>().configureEach {
-    if (JavaVersion.VERSION_1_8 > JavaVersion.current())
-        jvmArgs = listOf("-XX:MaxPermSize=256m")
     testLogging {
         events.addAll(listOf(TestLogEvent.PASSED, TestLogEvent.FAILED, TestLogEvent.SKIPPED))
         showStandardStreams = true
